<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:padding="16dp">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_violence"
        android:src="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/futura_hv_font"
        android:text="@string/pemukulan"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:baseline="16dp"
        android:contentDescription="@string/location_icon"
        android:src="@drawable/ic_location"
        app:layout_constraintBaseline_toBaselineOf="@id/item_coord"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintTop_toBottomOf="@id/item_title" />

    <TextView
        android:id="@+id/item_coord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/item_icon"
        app:layout_constraintTop_toBottomOf="@id/item_title"
        tools:text="15.37589272, -10.5892735982" />

    <Button
        android:id="@+id/item_accBtn"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_accepted"
        android:text="@string/terima"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_coord" />

</androidx.constraintlayout.widget.ConstraintLayout>