<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_create"
        android:layout_width="223dp"
        android:layout_height="186dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/futura_hv_font"
        android:text="@string/create_nyour_naccount"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:autofillHints="Nama"
        android:background="@drawable/border"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/email"
        android:background="@drawable/border"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_phonenumber"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/phone_number"
        android:background="@drawable/border"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingStart="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/password"
        android:background="@drawable/border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phonenumber"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_rwpassword"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/rewrite_password"
        android:background="@drawable/border"
        android:hint="@string/rewrite_password"
        android:inputType="textPassword"
        android:paddingStart="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/futura_hv_font"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rwpassword" />

    <Button
        android:id="@+id/btn_nsignup"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="44dp"
        android:background="@mipmap/foward_round"
        app:layout_constraintStart_toEndOf="@+id/tv_signup"
        app:layout_constraintTop_toBottomOf="@+id/et_rwpassword" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spinKit"
        style="@style/SpinKitView.FadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:SpinKit_Color="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_nsignup" />


</androidx.constraintlayout.widget.ConstraintLayout>