<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".view.DetailFragment"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:stateListAnimator="@null">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/list_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_toolbar"
            app:title="Violence Detected"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/image_violence"
                android:src="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="210dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="130dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="350dp" />

            <TextView
                android:id="@+id/text_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/nama"
                android:theme="@style/detailText"
                app:layout_constraintBottom_toTopOf="@id/text_alamat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline_top" />

            <TextView
                android:id="@+id/text_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/alamat"
                android:theme="@style/detailText"
                app:layout_constraintBottom_toTopOf="@id/text_telp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_nama" />

            <TextView
                android:id="@+id/text_telp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/no_telp"
                android:theme="@style/detailText"
                app:layout_constraintBottom_toTopOf="@id/text_coord"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_alamat" />

            <TextView
                android:id="@+id/text_coord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/titik_koordinat"
                android:theme="@style/detailText"
                app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_telp" />

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/detailText"
                app:layout_constraintBaseline_toBaselineOf="@id/text_nama"
                app:layout_constraintStart_toStartOf="@id/guideline_right"
                tools:text="Rich Chard" />

            <TextView
                android:id="@+id/detail_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/detailText"
                app:layout_constraintBaseline_toBaselineOf="@id/text_alamat"
                app:layout_constraintStart_toStartOf="@id/guideline_right"
                tools:text="Jl. ITS No. 20" />

            <TextView
                android:id="@+id/detail_telp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/detailText"
                app:layout_constraintBaseline_toBaselineOf="@id/text_telp"
                app:layout_constraintStart_toStartOf="@id/guideline_right"
                tools:text="08885737272" />

            <TextView
                android:id="@+id/detail_coord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/detailText"
                app:layout_constraintBaseline_toBaselineOf="@id/text_coord"
                app:layout_constraintStart_toStartOf="@id/guideline_right"
                tools:text="21.17589279, -10.582987982" />

            <fragment
                android:id="@+id/detail_map"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline_bottom" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/declined"
        android:text="@string/call"
        android:textColor="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>